--- a/.github/workflows/innovationlab-publish-notifications.yaml
+++ b/.github/workflows/innovationlab-publish-notifications.yaml
@@ -26,21 +26,18 @@ jobs:
     - name: Get current timestamp
       id: timestamp
       run: echo "current_timestamp=$(date -Is)" >> $GITHUB_ENV
-      #TBD How does payload look? Do I need other headers?
-      #TBD Create new database in AJO
-      #TBD crete local google docs
-      #TBD add private github workaround
     - name: Set up AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
     - name: Send JSON to Lambda
       env:
         url: https://newhorizons-blog.innovationlab.cx${{ endsWith(github.event.client_payload.path, '.json') && github.event.client_payload.path || steps.removeMd.outputs.replaced }}
       run: |
         aws lambda invoke \
-          --function-name conor_mvplab_dev_post_experience_event \
-          --payload '{"timestamp": "${{ env.current_timestamp }}", "text": "publication", "source": "content", "url": ${{ toJson(env.url) }}}' \
+          --function-name mvplab_prod_post_experience_event \
+          --cli-binary-format raw-in-base64-out \
+          --payload '{"headers":{"aep-sandbox-name":"${{ secrets.AEP_SANDBOX_NAME }}"},"body":{"identityNamespaceId": "keycloakId","identityId": "${{ secrets.IDENTITY_ID }}","schemaId":"${{ secrets.SCHEMA_ID }}","datasetId":"${{ secrets.SCHEMA_ID }}","eventType":"BlogPost","payload":{"_netcentricgmbh":{"aemEvent":{"timestamp": "${{ env.current_timestamp }}", "title": "publication", "sourceSystem": "content", "path": ${{ toJson(env.url) }}}}}}}' \
           /dev/null
