--- a/.github/workflows/innovationlab-publish-notifications.yaml
+++ b/.github/workflows/innovationlab-publish-notifications.yaml
@@ -32,6 +32,8 @@ jobs:
         echo "Title: $title"
         tags=$(jq -r '.results[0].record.tags[]' data.json)
         echo "Tags: $tags"
+        image=$(jq -r '.results[0].record.image' data.json)
+        echo "Image: $image"
     - name: Get current timestamp
       id: timestamp
       run: echo "current_timestamp=$(date -Is)" >> $GITHUB_ENV
