--- a/.github/workflows/innovationlab-publish-notifications.yaml
+++ b/.github/workflows/innovationlab-publish-notifications.yaml
@@ -30,10 +30,9 @@ jobs:
       run: |
         echo "title=$(jq -r '.results[0].record.description' index.json)" >> $GITHUB_ENV
         echo "image=$(jq -r '.results[0].record.image' index.json)" >> $GITHUB_ENV
-        tags=$(jq -r '.results[0].record.tags[]' index.json)
-        echo "tags_env_var<<EOF" >> $GITHUB_ENV
+        tags=$(jq -r '.results[0].record.tags' index.json)
+        tags=$(sed 's/"/\\"/g' <<< $tags)
         echo $tags >> $GITHUB_ENV
-        echo "EOF" >> $GITHUB_ENV
         
         
     - name: Get current timestamp
@@ -52,5 +51,5 @@ jobs:
         aws lambda invoke \
           --function-name mvplab_prod_post_experience_event \
           --cli-binary-format raw-in-base64-out \
-          --payload '{"headers":{"aep-sandbox-name":"${{ secrets.AEP_SANDBOX_NAME }}"},"body":{"identityNamespaceId": "keycloakId","identityId": "${{ secrets.IDENTITY_ID }}","schemaId":"${{ secrets.SCHEMA_ID }}","datasetId":"${{ secrets.DATASET_ID }}","eventType":"BlogPost","payload":{"_netcentricgmbh":{"aemEvent":{"action": "xdmPublished","timestamp": "${{ env.current_timestamp }}", "title": "${{ env.title }}", "tags_array": "${{ toJSON(env.tags_env_var) }}", "image": "${{ env.image }}", "sourceSystem": "franklin", "path": ${{ toJson(env.path) }}}}}}}' \
+          --payload '{"headers":{"aep-sandbox-name":"${{ secrets.AEP_SANDBOX_NAME }}"},"body":{"identityNamespaceId": "keycloakId","identityId": "${{ secrets.IDENTITY_ID }}","schemaId":"${{ secrets.SCHEMA_ID }}","datasetId":"${{ secrets.DATASET_ID }}","eventType":"BlogPost","payload":{"_netcentricgmbh":{"aemEvent":{"action": "xdmPublished","timestamp": "${{ env.current_timestamp }}", "title": "${{ env.title }}", "tags_array": "${{ env.tags }}", "image": "${{ env.image }}", "sourceSystem": "franklin", "path": ${{ toJson(env.path) }}}}}}}' \
           /dev/null
