add unpublish and author

--- a/.github/workflows/innovationlab-unpublish-notifications.yaml
+++ b/.github/workflows/innovationlab-unpublish-notifications.yaml
@@ -3,7 +3,7 @@ name: Innovationlab Publish
 on: 
   repository_dispatch:
     types:
-      - resource-published
+      - resource-unpublished
 
 jobs:
   debug:
@@ -30,7 +30,6 @@ jobs:
       run: |
         echo "title=$(jq -r '.results[0].record.description' index.json)" >> $GITHUB_ENV
         echo "image=$(jq -r '.results[0].record.image' index.json)" >> $GITHUB_ENV
-        echo "author=$(jq -r '.results[0].record.author' index.json)" >> $GITHUB_ENV
         tags=$(jq -r '.results[0].record.tags[]' index.json)
         echo "tags_env_var<<EOF" >> $GITHUB_ENV
         echo $tags >> $GITHUB_ENV
@@ -52,5 +51,5 @@ jobs:
         aws lambda invoke \
           --function-name mvplab_prod_post_experience_event \
           --cli-binary-format raw-in-base64-out \
-          --payload '{"headers":{"aep-sandbox-name":"${{ secrets.AEP_SANDBOX_NAME }}"},"body":{"identityNamespaceId": "keycloakId","identityId": "${{ secrets.IDENTITY_ID }}","schemaId":"${{ secrets.SCHEMA_ID }}","datasetId":"${{ secrets.DATASET_ID }}","eventType":"BlogPost","payload":{"_netcentricgmbh":{"aemEvent":{"action": "xdmPublished","timestamp": "${{ env.current_timestamp }}", "title": "${{ env.title }}", "author": "${{ env.author }}", "tags": "${{ env.tags_env_var }}", "image": "${{ env.image }}", "sourceSystem": "franklin", "path": ${{ toJson(env.path) }}}}}}}' \
+          --payload '{"headers":{"aep-sandbox-name":"${{ secrets.AEP_SANDBOX_NAME }}"},"body":{"identityNamespaceId": "keycloakId","identityId": "${{ secrets.IDENTITY_ID }}","schemaId":"${{ secrets.SCHEMA_ID }}","datasetId":"${{ secrets.DATASET_ID }}","eventType":"BlogPost","payload":{"_netcentricgmbh":{"aemEvent":{"action": "xdmUnpublished","timestamp": "${{ env.current_timestamp }}", "title": "${{ env.title }}", "tags": "${{ env.tags_env_var }}", "image": "${{ env.image }}", "sourceSystem": "franklin", "path": ${{ toJson(env.path) }}}}}}}' \
           /dev/null
